# bamboos

./: .bumpversion.cfg  Makefile  Pipfile  README.md  pylintrc  pyproject.toml
bamboos/: __init__.py  benchmark.py  color.py  date.py  encode.py  ensemble.py  explore.py  feature.py  logger.py
bamboos/utils/: cross_validation.py  dataframe.py  dates.py  dateutils.py  vis.py
bamboos/utils/metrics/: __init__.py  lgb.py  sklearn.py  xgb.py
bamboos/utils/model/: base_model.py  ligthgbm_model.py  model_zoo.py  param_zoo.py  sklearn_model.py  xgboost_model.py
test/: test_benchmark.py
