[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "bamboos"
author = "Aditya Kelvianto Sidharta"
author-email = "aditya.sdrt@gmail.com"
home-page = "http://adityasidharta.com"
classifiers = [
                "License :: OSI Approved :: MIT License",
                "Development Status :: 1 - Planning",
                "Programming Language :: Python :: 3 :: Only",
              ]
requires = ["numpy",
            "pandas",
            "scikit-learn",
            "matplotlib",
            "seaborn",
            "lightgbm",
            "seaborn",
            "category_encoders>=2.0.0",
            "matplotlib-venn"]
